<resources>
    <string name="app_name">AlarmClockTest</string>
    <string name="time">%1$02d:%2$02d</string>

    <string name="edit">编辑</string>
    <string name="alarm">闹钟</string>
    <string name="cancel_all_pick">取消全选</string>
    <string name="all_pick">全选</string>
    <string name="back_to">返回</string>
    <string name="edit_alarm">编辑闹钟</string>
    <string name="new_alarm">新建</string>
    <string name="without_repetition">不重复</string>
    <string name="deleted_success">删除成功</string>
    <string name="vibrate">振动</string>
    <string name="default_music">默认铃声</string>
    <string name="null_music">无</string>
    <string name="shadow">渐变</string>
    <string name="classics">金典</string>
    <string name="metal">金属</string>
    <string name="inspirit">激扬</string>
    <string name="lively">轻快</string>
    <string name="heart">初心</string>
    <string name="happyness">悦动</string>
    <string name="blink">闪烁</string>
    <string name="opening">开场</string>
    <string name="you_set">您设定了</string>
    <string name="number_of_alarm">个闹钟</string>
    <string name="aralm_ring">闹钟响了</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thurday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周天</string>
    <string name="everyday">每天</string>
    <string name="workday">工作日</string>
    <string name="weekend">周末</string>
    
    <string name="label">标签</string>
    <string name="require">只能输入15个字</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="not_set_alarm">未设置闹钟</string>
    <string name="delete">删除</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="repetition">重复</string>
    <string name="music">铃声</string>
    <string name="sleep_time">小睡时长</string>
    <string name="minute_time">分钟</string>
    <string name="sleep">小睡</string>
    <string name="close_alarm">向右滑关闭闹钟</string>
    <string name="save">保存</string>
</resources>
