<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="#000"
    android:orientation="horizontal">

    <Button
        android:id="@+id/back_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingTop="15dp"
        android:text="@string/back_to"
        android:textColor="#bdbfc3"
        android:textSize="14sp" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/music"
        android:textColor="#ccb418"
        android:textSize="14sp" />

    <Button
        android:id="@+id/save_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingTop="15dp"
        android:text="@string/save"
        android:textColor="#bdbfc3"
        android:textSize="14sp" />

</LinearLayout>