<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:background="#000"
    android:orientation="horizontal">

    <Button
        android:id="@+id/compile"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingTop="15dp"
        android:text="@string/edit"
        android:textColor="#bdbfc3"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/alarm"
        android:textColor="#ccb418"
        android:textSize="14sp" />

    <Button
        android:id="@+id/add"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:background="#000"
        android:paddingTop="15dp"
        android:text="@string/new_alarm"
        android:textColor="#bdbfc3"
        android:textSize="14sp" />
</LinearLayout>