<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/new_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="80dp">

        <NumberPicker
            android:id="@+id/hour"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:background="@drawable/bg_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/hour" />

        <NumberPicker
            android:id="@+id/minute"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/minute" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="false"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/label"
            android:textColor="#212121"
            android:textSize="16sp" />

        <Button
            android:id="@+id/label"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/list_btn_arrow" />

        <TextView
            android:id="@+id/label_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/label"
            android:gravity="center"
            android:text="@string/alarm"
            android:textColor="#212121"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/repetition"
            android:layout_alignBottom="@+id/repetition"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/repetition"
            android:textColor="#212121"
            android:textSize="16sp" />

        <Button
            android:id="@+id/repetition"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/list_btn_arrow" />

        <TextView
            android:id="@+id/week_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/repetition"
            android:gravity="center"
            android:text="@string/without_repetition"
            android:textColor="#212121"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="false"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:gravity="center"
            android:text="@string/music"
            android:textColor="#212121"
            android:textSize="16sp" />

        <Button
            android:id="@+id/sound"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/list_btn_arrow" />

        <TextView
            android:id="@+id/music_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/sound"
            android:gravity="center"
            android:text="@string/default_music"
            android:textColor="#212121"
            android:textSize="16sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/sleep_time"
            android:textColor="#212121"
            android:textSize="16sp" />

        <Button
            android:id="@+id/time"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/list_btn_arrow" />

        <TextView
            android:id="@+id/just_for_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/time"
            android:gravity="center"
            android:text="@string/minute_time"
            android:textColor="#212121"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/continue_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@id/just_for_layout"
            android:gravity="center"
            android:text="10"
            android:textColor="#212121"
            android:textSize="16sp" />
    </RelativeLayout>

</LinearLayout>
